--- a/server-side/.env
+++ b/server-side/.env
@@ -1,2 +1,2 @@
-DATABASE_ACCESS = mongodb+srv://superAdmin:8sygm6HKyMYvz2tQ@cluster0.fvf3o.mongodb.net/signUpTable?retryWrites=true&w=majority
+DATABASE_ACCESS = mongodb+srv://superAdmin:8sygm6HKyMYvz2tQ@cluster0.fvf3o.mongodb.net/Database?retryWrites=true&w=majority
 TOKEN=userJWT
